--- a/phone.css
+++ b/phone.css
@@ -1,8 +1,7 @@
 @media only screen and (max-width: 740px) {
-      .navbar{
-           
-      }
-      
+      #contactbox{
+          word-wrap: break-word; /* property which automatically adds newline when text overflows/*       
+      }      
       .imgset{
           content: url('./media/1mob.png');
       }
